--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url = jdbc:postgresql://localhost:5432/beparent
+spring.datasource.url = jdbc:postgresql://10.200.2.5:5432/beparent
 spring.datasource.username=postgres
 spring.datasource.password=root
 spring.jpa.generate-ddl=true
