add auth and registration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,6 @@ spring.datasource.url = jdbc:postgresql://10.200.2.5:5432/beparent
 spring.datasource.username=postgres
 spring.datasource.password=root
 spring.jpa.generate-ddl=true
+
+jwt.token.secret=foundandkeepit
+jwt.token.expired=2419200000
