--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.datasource.url = jdbc:postgresql://10.200.2.5:5432/beparent
 spring.datasource.username=postgres
 spring.datasource.password=root
 spring.jpa.generate-ddl=true
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 
 jwt.token.secret=foundandkeepit
 jwt.token.expired=2419200000
