готовность к огненной базе

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,12 @@ spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 
 jwt.token.secret=foundandkeepit
 jwt.token.expired=2419200000
+
+logging.level.org.springframework=WARN
+logging.level.web=TRACE
+logging.level.root=WARN
+logging.level.sql=ERROR
+logging.level.com.velesov84 = INFO
+
+logging.file=springlogs.log
+logging.file.max-size=256MB
